# ynab-weekly-spending

./: .gitignore  LICENSE.md  README.md  requirements.txt  setup.cfg  weekly-report.py
ynab/: api_client.py
ynab/models/: category.py  month_detail.py  payee.py  scheduled_transaction_summary.py  sub_transaction.py  transaction_detail.py  transaction_summary.py
ynab_weekly/: __init__.py  main.py
