[metadata]
name = YNAB Weekly
author = Nikola Kotur
author-email = kotnick@gmail.com
summary = Recieve top spending categories in YNAB weekly
description-file = README.md
license = Apache-2.0

[files]
packages =
    ynab_weekly
namespace_packages =
    ynab_weekly

[entry_points]
console_scripts =
    ynab-weekly = ynab_weekly.main:run
