[metadata]
name = YNAB Weekly
author = Nikola Kotur
author-email = kotnick@gmail.com
summary = Recieve top spending categories in YNAB weekly
description-file = README.md
description-content-type = text/markdown
license = Apache-2.0
home-page = https://github.com/kotnik/ynab-weekly-spending
python_requires = '>=2.6, <3'
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Topic :: Office/Business :: Financial :: Accounting

[files]
packages =
    ynab_weekly
namespace_packages =
    ynab_weekly

[entry_points]
console_scripts =
    ynab-weekly = ynab_weekly.main:run
